Add compact mode setting and shortcut

--- a/pympress/share/locale/de/LC_MESSAGES/pympress.po
+++ b/pympress/share/locale/de/LC_MESSAGES/pympress.po
@@ -303,6 +303,11 @@ msgstr "Inhalt _ausrichten"
 msgid "_Annotations"
 msgstr "_Anmerkungen"
 
+#:
+msgid "_Compact mode"
+msgstr "_Kompakter Modus"
+
+
 #: 
 msgid "_Blank screen"
 msgstr "_Schwarzer Bildschirm"
