--- a/pympress/share/locale/zh_CN/LC_MESSAGES/pympress.po
+++ b/pympress/share/locale/zh_CN/LC_MESSAGES/pympress.po
@@ -1073,3 +1073,34 @@ msgstr "幻灯片浏览视图"
 msgid "Show deck overview"
 msgstr "显示幻灯片浏览视图"
 
+#: 
+msgid "Pympress can not edit PDF annotation {}"
+msgstr "Pympress无法编辑PDF注释 {}"
+
+#: 
+msgid "\n"
+"ERROR: Gobject Introspections and/or pycairo module is missing. Make sure Gtk, pygobject and pycairo are installed.\n"
+"\n"
+"Try your operating system’s package manager, and ensure you installed pympress with access to system packages.\n"
+"Typically, this means having installed with:\n"
+"  pipx install --system-site-packages pympress\n"
+"\n"
+"Alternately, ask pip to download and compile pygobject and pycairo, for which you may need the Gtk and cairo headers\n"
+"(or development packages):\n"
+"  pipx inject pympress pygobject pycairo\n"
+"\n"
+"For further instructions, refer to https://github.com/Cimbali/pympress/blob/master/README.md#dependencies\n"
+""
+msgstr "\n"
+"错误：缺少 Gobject Introspections 和/或 pycairo 模块。请确保已安装 Gtk、pygobject 和 pycairo。\n"
+"\n"
+"请尝试使用操作系统的包管理器，并确保在安装 pympress 时能够访问系统包。\n"
+"通常，这表示需要使用以下命令安装 pympress：\n"
+"  pipx install --system-site-packages pympress\n"
+"\n"
+"或者，由 pip 下载并编译 pygobject 和 pycairo，但这可能需要 Gtk 和 cairo 头文件（或开发包）：\n"
+"  pipx inject pympress pygobject pycairo\n"
+"\n"
+"有关详细说明，请参阅 https://github.com/Cimbali/pympress/blob/master/README.md#dependencies\n"
+""
+
