--- a/pympress/share/locale/de/LC_MESSAGES/pympress.po
+++ b/pympress/share/locale/de/LC_MESSAGES/pympress.po
@@ -1073,3 +1073,34 @@ msgstr "_Deck-Übersicht"
 msgid "Show deck overview"
 msgstr "Deck-Übersicht anzeigen"
 
+#: 
+#, fuzzy
+msgid "Pympress can not edit PDF annotation {}"
+msgstr "Pympress kann keine PDF Anmerkungen bearbeiten {}"
+
+#: 
+msgid "\n"
+"ERROR: Gobject Introspections and/or pycairo module is missing. Make sure Gtk, pygobject and pycairo are installed.\n"
+"\n"
+"Try your operating system’s package manager, and ensure you installed pympress with access to system packages.\n"
+"Typically, this means having installed with:\n"
+"  pipx install --system-site-packages pympress\n"
+"\n"
+"Alternately, ask pip to download and compile pygobject and pycairo, for which you may need the Gtk and cairo headers\n"
+"(or development packages):\n"
+"  pipx inject pympress pygobject pycairo\n"
+"\n"
+"For further instructions, refer to https://github.com/Cimbali/pympress/blob/master/README.md#dependencies\n"
+""
+msgstr "FEHLER: Gobject Introspections und/oder pycairo-Modul fehlt. Stelle sicher, dass Gtk, pygobject und pycairo installiert sind.\n"
+"\n"
+"Probiere den Paketmanager des Betriebssystems aus und stelle sicher, dass pympress mit Zugriff auf Systempakete installiert ist.\n"
+"Normalerweise bedeutet das, dass die Installation mit folgendem Befehl erfolgt ist:\n"
+"pipx install --system-site-packages pympress\n"
+"\n"
+"Alternativ kann man pip bitten, pygobject und pycairo herunterzuladen und zu kompilieren, wofür möglicherweise die Gtk- und Cairo-Header benötigt werden\n"
+"(oder Entwicklungspakete):\n"
+"pipx inject pympress pygobject pycairo\n"
+"\n"
+"Weitere Anweisungen unter https://github.com/Cimbali/pympress/blob/master/README.md#dependencies"
+
